tests/cases/positive/typing/grading/zeroUseVarUnused.lam
-- we specify the variable should not be used, and indeed we don't use it
test : (l : (.0, .0) Unit) -> Unit
test = \l -> unit
