tests/cases/negative/typing/grading/mismatchedGradesForSucc.lam
-- the inferred type should not equal the proposed type

-- As succ : (n : [.1, .0] Nat) -> Nat
succ' : (n : [.3, .4] Nat) -> Nat
succ' = succ
